[gd_scene load_steps=4 format=3 uid="uid://j5u9v4w0x1yza"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1"]
[ext_resource type="Theme" path="res://assets/ui_theme.theme" id="2"]
[ext_resource type="FontFile" path="res://assets/game_font.ttf" id="3"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(0.2, 0.2, 0.4, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
theme = ExtResource("2")

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Marketing Maze Master"
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Navigate the brain-shaped maze of consumer psychology!

CONTROLS:
• WASD or Arrow Keys - Move through the maze
• Spacebar - Jump over obstacles
• ESC - Pause game

OBJECTIVES:
• Collect GREEN Customer Insights for points
• Find GOLD Behavior Keys to unlock doors
• Avoid RED Ad Fatigue Traps (instant defeat!)
• Unlock PURPLE A/B Test Doors and ORANGE Target Audience Locks
• Reach the WHITE goal to achieve Marketing Mastery!

TIPS:
• Plan your route carefully - some paths require keys
• Watch out for pulsing red traps
• Collect all insights for maximum score"
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start Game"
theme_override_fonts/font = ExtResource("3")

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Close Game"
theme_override_fonts/font = ExtResource("3")